finalizando back-end do app

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,17 @@ APP_API_URL=http://localhost:3333
 MAIL_DRIVER=etehreal
 
 
-# Gmail credentials
-EMAIL_ADRESS=
-EMAIL_PASSWORD=
+# AWS credentials
+# AWS_ACESS_KEY_ID=
+# AWS_SECRET_ACESS_KEY=
+
+# Storage
+STORAGE_DRIVER=disk
+#STORAGE_DRIVER=s3
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
+
