--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "aws-sdk": "^2.841.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
     "class-transformer": "^0.3.2",
@@ -22,11 +23,15 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.22.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.0",
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "pg": "^8.4.2",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.29",
@@ -35,10 +40,12 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
+    "@types/ioredis": "^4.19.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.3",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.28",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "6.8.0",
